# libgami

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  gami-1.0.pc.in  index.html  libgami-1.0.pc.in
css/: style.css
debian/: changelog  control  copyright  libgami0.substvars  rules
docs/reference/: .gitignore  Makefile.am  building.sgml  compiling.sgml  example.sgml  gami-docs.sgml  gami-sections.txt  libgami-docs.sgml  libgami-sections.txt  libgami.types  unimplemented.sgml
gami/: gami-main.c  gami-manager.c  gami-manager.h  gami-response.c  gami.h
po/: .gitignore  POTFILES.in  de.po  es.po
reference/: index.html  libgami-building.html  libgami-compiling.html  libgami-error.html  libgami-example.html  libgami-main.html  libgami-manager-response-types.html  libgami-manager.html  libgami-reference.html  libgami-unimplemented.html  libgami.html
src/: .gitignore  Makefile.am  gami-enums.h  gami-enumtypes.c.template  gami-enumtypes.h.template  gami-error.c  gami-error.h  gami-main.c  gami-main.h  gami-manager-private.c  gami-manager-private.h  gami-manager-types.c  gami-manager-types.h  gami-manager.c  gami-manager.h  gami-response.c  gami-response.h  gami.c  gami.h
